--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,3 +1,38 @@
 @import "~bootstrap/scss/bootstrap";
+body {
+    background: rgb(0,0,0);
+    background: linear-gradient(148deg, rgba(0,0,0,1) 0%, rgba(143,36,36,1) 50%, rgba(174,0,0,1) 100%);
+    height: 100%;
+    background-size: cover;
+}
 
+#background_title {
+    background-image: url(../../public/img/the-background-293017_1280.webp);
+    background-size: cover;
+    width: 30%;
+    margin: 10px auto;
+    border-radius: 50px;
+    border: 2px solid #a60404;
+}
 
+h1 {
+    text-align: center;
+    padding: 10px 0;
+    color: #fff;
+    font-weight: bolder;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+li {
+    background-color: rgba(128, 128, 128, 0.57);
+    border: 2px solid rgb(61, 61, 61);
+    width: 25%;
+    border-radius: 30px;
+    margin: 50px auto;
+    color: #fff;
+    text-align: center;
+}
